[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
rustyline = "14.0.0"
libmem = "5"

[dependencies.windows]
version = "0.*"
features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_System_Console"]

[dependencies.mlua]
version = "0.*"
features = ["luajit52", "vendored"]
